fix: Fixed Prometheus config
